# eventsapp

./: .gitignore  .pre-commit-config.yaml  README.md  bandit.yaml  docker-compose.yaml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
