[project]
name = "portal-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "mrabott",email = "ad@ksc.pl"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django-allauth (>=65.7.0,<66.0.0)",
    "psycopg[binary] (>=3.2.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
