[tool.poetry]
name = "portal-backend"
version = "0.1.0"
description = ""
authors = ["mrabott <ad@ksc.pl>"]
readme = "README.md"
#packages = [{ include = "portal_backend", from = "src" }]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7"
pytest = "^8.1"
pytest-cov = "^5.0"
django-stubs = "^5.2.0"
mypy-extensions = "^1.1.0"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
django = "5.2"
djangorestframework = "3.16"
django-allauth = "^65.7.0"
psycopg = {version = "^3.2", extras = ["binary"]}
python-decouple = "^3.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

